--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,9 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+venv/
+__pycache__/
+*.ipynb_checkpoints/
+data/raw/
+reports/figures/
+
