--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,7 @@ ipywidgets==8.1.7
 isoduration==20.11.0
 jedi==0.19.2
 Jinja2==3.1.6
+joblib==1.5.2
 json5==0.12.1
 jsonpointer==3.0.0
 jsonschema==4.25.1
@@ -57,6 +58,7 @@ jupyterlab==4.4.9
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.15
+kaggle==1.7.4.5
 kiwisolver==1.4.9
 lark==1.3.0
 MarkupSafe==3.0.3
@@ -87,6 +89,7 @@ pluggy==1.6.0
 pre_commit==4.3.0
 prometheus_client==0.23.1
 prompt_toolkit==3.0.52
+protobuf==6.32.1
 psutil==7.1.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
@@ -99,6 +102,7 @@ pyparsing==3.2.5
 pytest==8.4.2
 python-dateutil==2.9.0.post0
 python-json-logger==4.0.0
+python-slugify==8.0.4
 pytokens==0.1.10
 pytz==2025.2
 PyYAML==6.0.3
@@ -110,6 +114,8 @@ rfc3986-validator==0.1.1
 rfc3987-syntax==1.1.0
 rpds-py==0.27.1
 ruff==0.14.0
+scikit-learn==1.7.2
+scipy==1.16.3
 Send2Trash==1.8.3
 setuptools==80.9.0
 six==1.17.0
@@ -117,8 +123,11 @@ sniffio==1.3.1
 soupsieve==2.8
 stack-data==0.6.3
 terminado==0.18.1
+text-unidecode==1.3
+threadpoolctl==3.6.0
 tinycss2==1.4.0
 tornado==6.5.2
+tqdm==4.67.1
 traitlets==5.14.3
 typeguard==4.4.4
 types-python-dateutil==2.9.0.20251008
